# dots

./: .bashrc  .gitmodules  .vimspector.json  .xinitrc  README.md  auto_clicker.sh  discord-theme  sideberry
.cache/wal/: sequences
.config/: libinput-gestures.conf  picom.conf  starship.toml
.config/BetterDiscord/plugins/: BetterFormattingRedux.config.json  DisplayLargeMessages.config.json  Game Activity Toggle.config.json  GoogleTranslateOption.config.json  InAppNotifications.config.json  NFLDInc_Plugin.plugin.js  NoDeleteMessages.config.json  NoDeleteMessages.plugin.js  XenoLib.config.json  (+1 more)
.config/alacritty/: alacritty.yml
.config/espanso/: default.yml
.config/eww/: eww.scss  eww.xml
.config/fish/: config.fish  fishfile
.config/gtk-3.0/: settings.ini
.config/i3/: config
.config/nvim/: .netrwhist  init.vim  plugins.vim  whichkeyConfig.vim
.config/polybar/: config
.config/rofi/: config.rasi  flamingo.rasi
.doom.d/: config.el  custom.el  init.el  packages.el
.minecraft/: options.1.16.5.txt  options.1.8.9.txt  options1.16.5txt
.mozilla/firefox/: installs.ini  profiles.ini
.themes/oomox-aaa/: index.theme
.vim/: .netrwhist  coc-settings.json
.vim/undo-dir/: %home%legendofmiracles%.config%nvim%init.vim  %home%legendofmiracles%.config%nvim%whichkeyConfig.vim  %home%legendofmiracles%programming%eww%src%main.rs
Downloads/memes/: memes.sh
WM/: Cargo.toml
WM/src/: main.rs
cows/: giraffe.cow  legendofmiracles.cow  lolsu.cow  rick.cow  rick2.cow  rick_large.cow
eww/: app_name.sh  egs.sh
services/: v4l2loopback.service
(+80 files in other folders)
