[package]
name = "WM"
version = "0.1.0"
authors = ["legendofmiracles <legendofmiracles@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = {path="/home/legend/programming/penrose/"}
simplelog = "0.9.0"
hidapi = "1.2.5"
